; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/hotdox/extr_matrix.c_matrix_power_up.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/hotdox/extr_matrix.c_matrix_power_up.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MATRIX_ROWS = common dso_local global i64 0, align 8
@matrix = common dso_local global i64* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @matrix_power_up() #0 {
  %1 = alloca i64, align 8
  %2 = call i32 (...) @unselect_rows()
  %3 = call i32 (...) @init_cols()
  store i64 0, i64* %1, align 8
  br label %4

4:                                                ; preds = %12, %0
  %5 = load i64, i64* %1, align 8
  %6 = load i64, i64* @MATRIX_ROWS, align 8
  %7 = icmp ult i64 %5, %6
  br i1 %7, label %8, label %15

8:                                                ; preds = %4
  %9 = load i64*, i64** @matrix, align 8
  %10 = load i64, i64* %1, align 8
  %11 = getelementptr inbounds i64, i64* %9, i64 %10
  store i64 0, i64* %11, align 8
  br label %12

12:                                               ; preds = %8
  %13 = load i64, i64* %1, align 8
  %14 = add i64 %13, 1
  store i64 %14, i64* %1, align 8
  br label %4

15:                                               ; preds = %4
  ret void
}

declare dso_local i32 @unselect_rows(...) #1

declare dso_local i32 @init_cols(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
